--- a/project.html
+++ b/project.html
@@ -30,13 +30,14 @@
                         <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
             </div>
         </section> -->
-        <section class="section-white">
+         <section class="section-white">
             <div class="container-white container-center-white">
-                <h3 class="display-white">General knowledge Quiz<h3>
-                        <p>I like to showcase my work and thus, you can see my projects hosted online</p>
-                        <a class="link links-primary" href="https://replit.com/@saurabhchawda/Assignment-2?embed=1&output=1">Live Project</a>
-                        <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-2#index.js">View Source</a>
-                        </div>
+            <h3 class="display-white">General Knowledge Quiz<h3>
+            <p>A CLI app just to test you General knowledge.</p>
+            <a class="link links-primary" href="https://replit.com/@saurabhchawda/Assignment-2?embed=1&output=1">Live Project</a>
+            <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-2#index.js">View Source</a>
+            </div>
+                        </section>
         </section>
         <section class="section">
             <div class="container container-center">
