style: Change in style

--- a/Blogs.html
+++ b/Blogs.html
@@ -8,6 +8,55 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    
+    <nav class="navigation">
+        <div class="web-developer">Saurabh Chawda</div>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline">
+                <a class="links link-active" href='/index.html'>Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="links" href='/project.html'>Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="links" href='/Blogs.html'>Blog</a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+    <h1 class="header-heading">
+        <bold>Blogs</bold>
+    </h1>
+    </header>
+    <section class="section-blog">
+        <div class="container container-center">
+            <h2 class="display">Digital Marketing<h2>
+                <h6>September, 2021</h6>
+                    <p>Web Development Create your Virtual Shop/Company On the Internet. A Website is necessary For every business because it builds Trust to your Customer for your Product or Services.</p>
+                    <a class="link links-primary" href="Digitalmarketing.html">Read more</a>
+        </div>
+    </section>
+    <section class="section-blog">
+        <div class="container container-center">
+            <h2 class="display">Get Peace!<h2>
+                <h6>July, 2021</h6>
+                    <p>Most people suffer from overthinking problems. Before starting any work. You should definitely think once but when you think all over the day about any particular work which will ruin your life. </p>
+                    <a class="link links-primary" href="Peace.html">Read more</a>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-header">Contact Us</div>
+        <ul class="social-links">
+            <li class="list-item-inline">
+            <a class="link" href="https://instagram.com/sauuu__ra__bh?utm_medium=copy_link">Instagram</a>
+            </li>
+            <li class="list-item-inline">
+            <a class="link" href="https://github.com/SaurabhChawda">GitHub</a>
+            </li >
+            <li class="list-item-inline">
+            <a class="link" href="https://www.linkedin.com/in/saurabh-chawda-36a28a1b7">Linkedin</a>
+            </li>
+
+        </ul>
+    </footer>
 </body>
 </html>
