--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a class="links" href='/project.html'>Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="links" href='/Blog.html'>Blog</a>
+                <a class="links" href='/Blogs.html'>Blog</a>
             </li>
         </ul>
     </nav>
