--- a/project.html
+++ b/project.html
@@ -20,49 +20,53 @@
                 <a class="links" href='/project.html'>Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="links" href='/Blog.html'>Blog</a>
+                <a class="links" href='/Blogs.html'>Blog</a>
             </li>
         </ul>
     </nav>
-        <!--<section class="section">
+    <!--<section class="section">
             <div class="container container-center">
                 <h3 class="display">Technologies<h3>
                         <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
             </div>
         </section> -->
-         <section class="section-white">
-            <div class="container-white container-center-white">
+    <section class="section-white">
+        <div class="container-white container-center-white">
             <h3 class="display-white">General Knowledge Quiz<h3>
-            <p>A CLI app just to test you General knowledge.</p>
-            <a class="link links-primary" href="https://replit.com/@saurabhchawda/Assignment-2?embed=1&output=1">Live Project</a>
-            <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-2#index.js">View Source</a>
-            </div>
-                        </section>
-        </section>
-        <section class="section">
-            <div class="container container-center">
-                <h3 class="display">How Well do you know Saurabh Chawda?<h3>
-                        <p>A CLI app built with nodeJS.</p>
-                       <a class="link links-primary" href="https://replit.com/@saurabhchawda/Assignment-1?embed=1&output=1">Live Project</a>
-                       <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-1#index.js">View Source</a>
-                </div>
-        </section>
+                    <p>A CLI app just to test you General knowledge.</p>
+                    <a class="link links-primary"
+                        href="https://replit.com/@saurabhchawda/Assignment-2?embed=1&output=1">Live Project</a>
+                    <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-2#index.js">View
+                        Source</a>
+        </div>
+    </section>
+    </section>
+    <section class="section">
+        <div class="container container-center">
+            <h3 class="display">How Well do you know Saurabh Chawda?<h3>
+                    <p>A CLI app built with nodeJS.</p>
+                    <a class="link links-primary"
+                        href="https://replit.com/@saurabhchawda/Assignment-1?embed=1&output=1">Live Project</a>
+                    <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-1#index.js">View
+                        Source</a>
+        </div>
+    </section>
 
-        <footer class="footer">
-            <div class="footer-header">Contact Us</div>
-            <ul class="social-links">
-                <li class="list-item-inline">
+    <footer class="footer">
+        <div class="footer-header">Contact Us</div>
+        <ul class="social-links">
+            <li class="list-item-inline">
                 <a class="link" href="https://instagram.com/sauuu__ra__bh?utm_medium=copy_link">Instagram</a>
-                </li>
-                <li class="list-item-inline">
+            </li>
+            <li class="list-item-inline">
                 <a class="link" href="https://github.com/SaurabhChawda">GitHub</a>
-                </li >
-                <li class="list-item-inline">
+            </li>
+            <li class="list-item-inline">
                 <a class="link" href="https://www.linkedin.com/in/saurabh-chawda-36a28a1b7">Linkedin</a>
-                </li>
-    
-            </ul>
-        </footer>
+            </li>
+
+        </ul>
+    </footer>
 
 </body>
 
