--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
     </nav>
     <header class="header">
-        <img class="header-img" src="images/Camera.svg">
+        <img class="header-img" src="/images/camera.svg">
         <h1 class="header-heading">
             <bold>Create<span class="header-heading-inverted"> Amazing Businesss</span> Website</bold>
         </h1>
