--- a/Digitalmarketing.html
+++ b/Digitalmarketing.html
@@ -18,7 +18,7 @@
                 <a class="links" href='/project.html'>Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="links" href='/Blogs.html'>Blog</a>
+                <a class="links" href='/Blogs.html'>Blogs</a>
             </li>
         </ul>
     </nav>
