--- a/project.html
+++ b/project.html
@@ -24,12 +24,6 @@
             </li>
         </ul>
     </nav>
-    <!--<section class="section">
-            <div class="container container-center">
-                <h3 class="display">Technologies<h3>
-                        <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
-            </div>
-        </section> -->
     <section class="section-white">
         <div class="container-white container-center-white">
             <h3 class="display-white">General Knowledge Quiz<h3>
@@ -40,6 +34,25 @@
                         Source</a>
         </div>
     </section>
+    <section class="section">
+        <div class="container container-center">
+            <h3 class="display">Saurabh Chawda<h3>
+                    <p>This a simple Page for Checking Connection With Github</p>
+                    <a class="link links-primary"
+                        href="https://saurabhchawda.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Saurabhchawda.com">View
+                        Source</a>
+        </div>
+    </section>
+    <section class="section-white">
+        <div class="container-white container-center-white">
+            <h3 class="display-white">General Knowledge Quiz<h3>
+                    <p>A CLI app just to test you General knowledge.</p>
+                    <a class="link links-primary"
+                        href="https://replit.com/@saurabhchawda/Assignment-2?embed=1&output=1">Live Project</a>
+                    <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-2#index.js">View
+                        Source</a>                        
+        </div>
     </section>
     <section class="section">
         <div class="container container-center">
