--- a/project.html
+++ b/project.html
@@ -26,11 +26,11 @@
     </nav>
     <section class="section-white">
         <div class="container-white container-center-white">
-            <h3 class="display-white">General Knowledge Quiz<h3>
+            <h3 class="display-white"><h3>
                     <p>A CLI app just to test you General knowledge.</p>
                     <a class="link links-primary"
-                        href="https://replit.com/@saurabhchawda/Assignment-2?embed=1&output=1">Live Project</a>
-                    <a class="link links-secondary" href="https://replit.com/@saurabhchawda/Assignment-2#index.js">View
+                        href="https://banana-talk-javascript.netlify.app/>Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Banana-Talk">View
                         Source</a>
         </div>
     </section>
