Docs: Change heading

--- a/project.html
+++ b/project.html
@@ -26,8 +26,8 @@
     </nav>
     <section class="section-white">
         <div class="container-white container-center-white">
-            <h3 class="display-white"><h3>
-                    <p>A CLI app just to test you General knowledge.</p>
+            <h3 class="display-white">Banana Talk<h3>
+                    <p>A website Which Convert English lanuage into Banana Talk</p>
                     <a class="link links-primary"
                         href="https://banana-talk-javascript.netlify.app/>Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Banana-Talk">View
