--- a/project.html
+++ b/project.html
@@ -28,8 +28,8 @@
         <div class="container-white container-center-white">
             <h3 class="display-white">Banana Talk<h3>
                     <p>A website Which Convert English lanuage into Banana Talk</p>
-                    <a class="link links-primary">
-                        href="https://banana-talk-javascript.netlify.app/>Live Project</a>
+                    <a class="link links-primary"
+                        href="https://banana-talk-javascript.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Banana-Talk">View
                         Source</a>
         </div>
