Add Translate Project

--- a/project.html
+++ b/project.html
@@ -36,6 +36,26 @@
     </section>
     <section class="section">
         <div class="container container-center">
+            <h3 class="display">Old English Translator<h3>
+                    <p>This website will help to change old English language to Advance English</p>
+                    <a class="link links-primary"
+                        href="https://old-english-translator-shakespeares.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Old-English-Translator">View
+                        Source</a>
+        </div>
+    </section>
+    <section class="section-white">
+        <div class="container-white container-center-white">
+            <h3 class="display-white">Banana Talk<h3>
+                    <p>A website Which Convert English lanuage into Banana Talk</p>
+                    <a class="link links-primary"
+                        href="https://banana-talk-javascript.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Banana-Talk">View
+                        Source</a>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container container-center">
             <h3 class="display">Saurabh Chawda<h3>
                     <p>This a simple Page for Checking Connection With Github</p>
                     <a class="link links-primary"
