--- a/project.html
+++ b/project.html
@@ -24,9 +24,39 @@
             </li>
         </ul>
     </nav>
+    <section class="section">
+        <div class="container container-center">
+            <h3 class="display">2<h3>
+                    <p>This website will help to change old English language to Advance English.</p>
+                    <a class="link links-primary"
+                        href="https://old-english-translator-shakespeares.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Old-English-Translator">View
+                        Source</a>
+        </div>
+    </section>
     <section class="section-white">
         <div class="container-white container-center-white">
-            <h3 class="display-white">Banana Talk<h3>
+            <h3 class="display-white">Company Cash Manager<h3>
+                    <p>It is a simple website for minimize the effort of company Manager to manage the cash.</p>
+                    <a class="link links-primary"
+                        href="https://company-cash-manager.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Cash-Register-Manager">View
+                        Source</a>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container container-center">
+            <h3 class="display">2<h3>
+                    <p>This website will help to change old English language to Advance English.</p>
+                    <a class="link links-primary"
+                        href="https://old-english-translator-shakespeares.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Old-English-Translator">View
+                        Source</a>
+        </div>
+    </section>
+    <section class="section-white">
+        <div class="container-white container-center-white">
+            <h3 class="display-white">1<h3>
                     <p>A website Which Convert English lanuage into Banana Talk</p>
                     <a class="link links-primary"
                         href="https://banana-talk-javascript.netlify.app/">Live Project</a>
@@ -37,7 +67,7 @@
     <section class="section">
         <div class="container container-center">
             <h3 class="display">Old English Translator<h3>
-                    <p>This website will help to change old English language to Advance English</p>
+                    <p>This website will help to change old English language to Advance English.</p>
                     <a class="link links-primary"
                         href="https://old-english-translator-shakespeares.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Old-English-Translator">View
@@ -47,7 +77,7 @@
     <section class="section-white">
         <div class="container-white container-center-white">
             <h3 class="display-white">Banana Talk<h3>
-                    <p>A website Which Convert English lanuage into Banana Talk</p>
+                    <p>A website Which Convert English lanuage into Banana Talk.</p>
                     <a class="link links-primary"
                         href="https://banana-talk-javascript.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Banana-Talk">View
@@ -57,7 +87,7 @@
     <section class="section">
         <div class="container container-center">
             <h3 class="display">Saurabh Chawda<h3>
-                    <p>This a simple Page for Checking Connection With Github</p>
+                    <p>This a simple Page for Checking Connection With Github.</p>
                     <a class="link links-primary"
                         href="https://saurabhchawda.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Saurabhchawda.com">View
