Feat:Add Birthday Check Project

--- a/project.html
+++ b/project.html
@@ -26,11 +26,11 @@
     </nav>
     <section class="section">
         <div class="container container-center">
-            <h3 class="display">2<h3>
-                    <p>This website will help to change old English language to Advance English.</p>
+            <h3 class="display">Chech Lucky Birthday<h3>
+                    <p>Wanna Check your that your Birthday date is Lucky?</p>
                     <a class="link links-primary"
-                        href="https://old-english-translator-shakespeares.netlify.app/">Live Project</a>
-                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Old-English-Translator">View
+                        href="https://check-your-birthday.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Birthday-Checker">View
                         Source</a>
         </div>
     </section>
