Add Palindrome Project

--- a/project.html
+++ b/project.html
@@ -26,6 +26,26 @@
     </nav>
     <section class="section">
         <div class="container container-center">
+            <h3 class="display">Is your Birthday date Palidrome? Check Here<h3>
+                    <p>A wesbite for Checking your birthday date.Is your birthday date Palidrome?</p>
+                    <a class="link links-primary"
+                        href="https://check-birthday-date-palindrome.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Palindrome-Birthday">View
+                        Source</a>
+        </div>
+    </section>
+    <section class="section-white">
+        <div class="container-white container-center-white">
+            <h3 class="display-white">Fun With Triangle<h3>
+                    <p>It is a simple website for minimize the effort of company Manager to manage the cash.</p>
+                    <a class="link links-primary"
+                        href="https://company-cash-manager.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Cash-Register-Manager">View
+                        Source</a>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container container-center">
             <h3 class="display">Chech Lucky Birthday<h3>
                     <p>Wanna Check your that your Birthday date is Lucky?</p>
                     <a class="link links-primary"
