--- a/project.html
+++ b/project.html
@@ -24,9 +24,19 @@
             </li>
         </ul>
     </nav>
+    <section class="section-white">
+        <div class="container-white container-center-white">
+            <h3 class="display-white">Stock Project Profit and Loss<h3>
+                    <p>If you have invested in stock market you need to check this website for calculate Profit and loss.</p>
+                    <a class="link links-primary"
+                        href="https://share-market-pl.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Stock-Profit-Loss">View
+                        Source</a>
+        </div>
+    </section>
     <section class="section">
         <div class="container container-center">
-            <h3 class="display">Is your Birthday date Palidrome? Check Here<h3>
+            <h3 class="display">Is your Birthday date Palindrome? Check Here<h3>
                     <p>A wesbite for Checking your birthday date.Is your birthday date Palidrome?</p>
                     <a class="link links-primary"
                         href="https://check-birthday-date-palindrome.netlify.app/">Live Project</a>
@@ -40,7 +50,7 @@
                     <p>It is a simple website for minimize the effort of company Manager to manage the cash.</p>
                     <a class="link links-primary"
                         href="https://company-cash-manager.netlify.app/">Live Project</a>
-                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Cash-Register-Manager">View
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Fun-With-Triangle">View
                         Source</a>
         </div>
     </section>
