--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
     </nav>
     <section class="section-white">
         <div class="container-white container-center-white">
-            <h3 class="display-white">Stock Project Profit and Loss<h3>
+            <h3 class="display-white">Stock Market Profit and Loss<h3>
                     <p>If you have invested in stock market you need to check this website for calculate Profit and loss.</p>
                     <a class="link links-primary"
                         href="https://share-market-pl.netlify.app/">Live Project</a>
