--- a/project.html
+++ b/project.html
@@ -76,21 +76,21 @@
     </section>
     <section class="section">
         <div class="container container-center">
-            <h3 class="display">2<h3>
-                    <p>This website will help to change old English language to Advance English.</p>
+            <h3 class="display">Technical Skills<h3>
+                    <p>List of technical Skills</p>
                     <a class="link links-primary"
-                        href="https://old-english-translator-shakespeares.netlify.app/">Live Project</a>
-                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Old-English-Translator">View
+                        href="https://qxfdv.csb.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Technical-Skills">View
                         Source</a>
         </div>
     </section>
     <section class="section-white">
         <div class="container-white container-center-white">
-            <h3 class="display-white">1<h3>
-                    <p>A website Which Convert English lanuage into Banana Talk</p>
+            <h3 class="display-white">Emoji-Detector<h3>
+                    <p>This is a simple website just to check the name of emoji.</p>
                     <a class="link links-primary"
-                        href="https://banana-talk-javascript.netlify.app/">Live Project</a>
-                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Banana-Talk">View
+                        href="https://58ty5.csb.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Emoji-Detector">View
                         Source</a>
         </div>
     </section>
