--- a/project.html
+++ b/project.html
@@ -47,9 +47,9 @@
     <section class="section-white">
         <div class="container-white container-center-white">
             <h3 class="display-white">Fun With Triangle<h3>
-                    <p>It is a simple website for minimize the effort of company Manager to manage the cash.</p>
+                    <p>A website which is used to find the area and Hypotenues of a Triangle.</p>
                     <a class="link links-primary"
-                        href="https://company-cash-manager.netlify.app/">Live Project</a>
+                        href="fun-with-triangle-qaha.netlify.app">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Fun-With-Triangle">View
                         Source</a>
         </div>
