--- a/project.html
+++ b/project.html
@@ -36,8 +36,8 @@
     </section>
     <section class="section">
         <div class="container container-center">
-            <h3 class="display">Is your Birthday date Palindrome? Check Here<h3>
-                    <p>A wesbite for Checking your birthday date.Is your birthday date Palidrome?</p>
+            <h3 class="display">Birtday Palindrome<h3>
+                    <p>Is your Birthday date Palindrome or not ? Check Here</p>
                     <a class="link links-primary"
                         href="https://check-birthday-date-palindrome.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Palindrome-Birthday">View
