--- a/project.html
+++ b/project.html
@@ -47,7 +47,7 @@
     <section class="section-white">
         <div class="container-white container-center-white">
             <h3 class="display-white">Fun With Triangle<h3>
-                    <p>A website which is used to find the area and Hypotenues of a Triangle.</p>
+                    <p>A website which is used to find the area and Hypotenuse of a Triangle.</p>
                     <a class="link links-primary"
                         href="fun-with-triangle-qaha.netlify.app">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Fun-With-Triangle">View
@@ -56,8 +56,8 @@
     </section>
     <section class="section">
         <div class="container container-center">
-            <h3 class="display">Chech Lucky Birthday<h3>
-                    <p>Wanna Check your that your Birthday date is Lucky?</p>
+            <h3 class="display">Lucky Birthday<h3>
+                    <p>Check your Birthday date is lucky or not.</p>
                     <a class="link links-primary"
                         href="https://check-your-birthday.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Birthday-Checker">View
@@ -87,7 +87,7 @@
     <section class="section-white">
         <div class="container-white container-center-white">
             <h3 class="display-white">Emoji-Detector<h3>
-                    <p>This is a simple website just to check the name of emoji.</p>
+                    <p>Check the name of emoji.</p>
                     <a class="link links-primary"
                         href="https://58ty5.csb.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Emoji-Detector">View
@@ -97,7 +97,7 @@
     <section class="section">
         <div class="container container-center">
             <h3 class="display">Old English Translator<h3>
-                    <p>This website will help to change old English language to Advance English.</p>
+                    <p>This website will help you to change old English language to Advance English.</p>
                     <a class="link links-primary"
                         href="https://old-english-translator-shakespeares.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Old-English-Translator">View
