--- a/project.html
+++ b/project.html
@@ -49,7 +49,7 @@
             <h3 class="display-white">Fun With Triangle<h3>
                     <p>A website which is used to find the area and Hypotenuse of a Triangle.</p>
                     <a class="link links-primary"
-                        href="fun-with-triangle-qaha.netlify.app">Live Project</a>
+                        href="https://fun-with-triangle-qaha.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Fun-With-Triangle">View
                         Source</a>
         </div>
