--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <section class="section-white">
             <div class="container-white container-center-white">
                 <h3 class="display-white">Projects<h3>
-                        <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+                        <p>I have worked with  Some of live Projects.</p>
                             <a class="link links-primary" href="project.html">See Projects</a>
                         </div>
         </section>
         <section class="section">
             <div class="container container-center">
                 <h3 class="display">Blogs<h3>
-                        <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
+                        <p>I have Listed some of technical and non techincal blogs.</p>
                        <a class="link links-secondary" href="Blogs.html">Blogs</a>
                 </div>
         </section>
