--- a/project.html
+++ b/project.html
@@ -57,7 +57,7 @@
     <section class="section">
         <div class="container container-center">
             <h3 class="display">Lucky Birthday<h3>
-                    <p>Check your Birthday date is lucky or not.</p>
+                    <p>Is your Birthday date lucky or not ?</p>
                     <a class="link links-primary"
                         href="https://check-your-birthday.netlify.app/">Live Project</a>
                     <a class="link links-secondary" href="https://github.com/SaurabhChawda/Birthday-Checker">View
