--- a/Peace.html
+++ b/Peace.html
@@ -33,11 +33,11 @@
         <li>Most people suffer from overthinking problems. Before starting any work. You should definitely think once but when you think all over the day about any particular work which will ruin your life. After some time it becomes a disease. But you have no idea how to overcome this problem. I have an idea how you can solve this problem. Believe in God and Think that you are the only one in the world and you are doing very well in your life. Work only for happiness, not for money. If you always think of money then you will definitely get depression, anxiety, etc.</li>
         <li>Do not compare yourself with others. if you are doing this you will get jealous, self-doubt, etc. if you are doing what you want with your life simply do that. Forget about the results that you will get because if you work with your passion definitely you will get more than you expect.
         </li>
-        <li>Finally, if you want a better life then you should work on yourself. Forget about what people think because people always have an issue with the other life, even if you have more than them. Before expecting someone you need to change yourself first. If you will learn how to handle life with your mindset then you will definitely get peace in your life.
+        <h3 class="Para"></h3>
+        <p>Finally, if you want a better life then you should work on yourself. Forget about what people think because people always have an issue with the other life, even if you have more than them. Before expecting someone you need to change yourself first. If you will learn how to handle life with your mindset then you will definitely get peace in your life.
 
+        </p>
 
-            <p>If you really want to learn how to meditate. So you must Check sadhguru YouTube channel. In this channel, Sadguru has taught a method for meditation called Isha Kriya.</p>
-            </li>
     </ul>
         </p>
     
