--- a/Peace.html
+++ b/Peace.html
@@ -24,17 +24,17 @@
     </nav>
     <div class="Front">
     <h2 class="Bold">How to get peace from the inner and outer world</h2>
-    <p>Due to covid19 you are facing many problems in your life. Day by day you are losing peace with your life. So I am going to explain how to get peace in your life from the inner and outer world. So that you can have a better life.
-    <p>In this busy life, everyone wants to get peace in their life but most of the people are unable to achieve it due to many reasons. They have no idea how to organise life properly. They always compare themselves with others and feel guilty that they have nothing and have done nothing that is more enjoyable and worthy. I have mentioned some points below so that you can get peace from inner and outer life.</p>
+    <p>Due to covid19 We are facing many problems in your life. Day by day We are losing peace from our life. So I am going to explain how to get peace in life from the inner and outer world. So that we could have a better life.
+    <p>In this busy life, everyone wants to get peace in their life but most of the people are unable to achieve. They have no idea how to organise life properly. They always compare themselves with others and feel guilty.so, I have mentioned some points below so that you can get peace from inner and outer life.</p>
         </p>
     <h3 class="Para"></h3>
     <ul>
-        <li>Meditation is the only way through which you can find peace in the inner world. But most people do not know how to meditate. I am going to explain a type of meditation called Isha Kriya. In this Kriya, you have to focus on your respiration, when you inhale, you have to say "I am not the body" and when you exhale you have to say "not even the mind", during this action, You have to focus in between your eyebrows. As a personal experience, I have received a lot of attention in my inner world. If you do this then you will definitely keep peace in your life.</li>
+        <li>Meditation is the only way,Through which you can find peace in the inner world. But most people do not know how to meditate Properly. I am going to explain a type of meditation called Isha Kriya. In this Kriya, you have to focus on your respiration, whenever you inhale, you have to say "I am not the body" and whenever you exhale you have to say "not even the mind", during this action, You have to focus in between your eyebrows. As a personal experience, I have received a lot of attention in my inner world. If you do this then you will definitely keep peace in your life.</li>
         <li>Most people suffer from overthinking problems. Before starting any work. You should definitely think once but when you think all over the day about any particular work which will ruin your life. After some time it becomes a disease. But you have no idea how to overcome this problem. I have an idea how you can solve this problem. Believe in God and Think that you are the only one in the world and you are doing very well in your life. Work only for happiness, not for money. If you always think of money then you will definitely get depression, anxiety, etc.</li>
-        <li>Do not compare yourself with others. if you are doing this you will get jealous, self-doubt, etc. if you are doing what you want with your life simply do that. Forget about the results that you will get because if you work with your passion definitely you will get more than you expect.
+        <li>Do not compare yourself with others. if you are doing this you will get jealous, self-doubt, etc. if you are doing what you want with your life simply do that. Forget about the results. if you work with your passion definitely you will get more than you expect.
         </li>
         <h3 class="Para">Conclusion</h3>
-        <p>Finally, if you want a better life then you should work on yourself. Forget about what people think because people always have an issue with the other life, even if you have more than them. Before expecting someone you need to change yourself first. If you will learn how to handle life with your mindset then you will definitely get peace in your life.
+        <p>Finally, if you want a better life then you should work on yourself. Forget about what people think about you because people always have an issue with the other life, even you have more than them. Before expecting someone you need to change yourself first. If you will learn how to handle life with your mindset then you will definitely get peace in your life.
 
         </p>
 
