--- a/Blogs.html
+++ b/Blogs.html
@@ -31,7 +31,7 @@
         <div class="container container-center">
             <h2 class="display">Digital Marketing<h2>
                 <h6>September, 2021</h6>
-                    <p>Web Development Create your Virtual Shop/Company On the Internet. A Website is necessary For every business because....</p>
+                    <p>Web Development Create your Virtual Shop/Company On the Internet. A Website is necessary For every business because...</p>
                     <a class="link links-primary" href="Digitalmarketing.html">Read more</a>
         </div>
     </section>
@@ -39,7 +39,7 @@
         <div class="container container-center">
             <h2 class="display">Get Peace!<h2>
                 <h6>July, 2021</h6>
-                    <p>Most people suffer from overthinking problems. Before starting any work. You should definitely think once but....... </p>
+                    <p>Most people suffer from overthinking problems. Before starting any work. You should definitely think once but.... </p>
                     <a class="link links-primary" href="Peace.html">Read more</a>
         </div>
     </section>
