docs: Add New Project

--- a/project.html
+++ b/project.html
@@ -24,6 +24,16 @@
             </li>
         </ul>
     </nav>
+    <section class="section">
+        <div class="container container-center">
+            <h3 class="display">Shooting Game<h3>
+                    <p>A Basic Random Shooting Game</p>
+                    <a class="link links-primary"
+                        href="https://shooting-game-random.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Shooting-Game">View
+                        Source</a>
+        </div>
+    </section>
     <section class="section-white">
         <div class="container-white container-center-white">
             <h3 class="display-white">Stock Market Profit and Loss<h3>
