feat : Add new Project

--- a/project.html
+++ b/project.html
@@ -24,6 +24,16 @@
             </li>
         </ul>
     </nav>
+    <section class="section-white">
+        <div class="container-white container-center-white">
+            <h3 class="display-white">Skill Test<h3>
+                    <p>A Maths logic building test which helps you to build your IQ</p>
+                    <a class="link links-primary"
+                        href="https://math-skill-test.netlify.app/">Live Project</a>
+                    <a class="link links-secondary" href="https://github.com/SaurabhChawda/Skill-Test">View
+                        Source</a>
+        </div>
+    </section>
     <section class="section">
         <div class="container container-center">
             <h3 class="display">Shooting Game<h3>
