feat : add Feature

--- a/Blogs.html
+++ b/Blogs.html
@@ -29,6 +29,14 @@
     </header>
     <section class="section-blog">
         <div class="container container-center">
+            <h2 class="display">Alternatives of github<h2>
+                <h6>November, 2021</h6>
+                    <p>•	It is open source project so you can freely download and install it locally on your hardware.....</p>
+                    <a class="link links-primary" href="Github.html">Read more</a>
+        </div>
+    </section>
+    <section class="section-blog">
+        <div class="container container-center">
             <h2 class="display">Digital Marketing<h2>
                 <h6>September, 2021</h6>
                     <p>Web Development Create your Virtual Shop/Company On the Internet. A Website is necessary For every business because...</p>
